--- a/www/templates/partial/place-tmp.html
+++ b/www/templates/partial/place-tmp.html
@@ -3,7 +3,7 @@
         <img src="{{ dataPopup.imgPath }}" width="80" height="80" class="pull-left"/>
         <h4>{{ dataPopup.title }}</h4>
         <div class="address">{{ dataPopup.address }}, {{ dataPopup.zipcode }}</div>
-        <p>about {{ dataPopup.distance }} km</p>
+        <p>about {{ dataPopup.distance }} mi</p>
         <div class="clearfix"></div>
     </div>
     <div class="place-body">
