--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,6 +2,21 @@
 .strong {
   font-weight: 600; }
 
+.color-positive {
+  color: #387ef5; }
+
+.color-calm {
+  color: #11c1f3; }
+
+.color-balanced {
+  color: #33cd5f; }
+
+.color-energized {
+  color: #ffc900; }
+
+.color-assertive {
+  color: #ef473a; }
+
 .center-block {
   display: block;
   margin-left: auto;
@@ -12,6 +27,12 @@
 
 .pull-left {
   float: left !important; }
+
+.date-time {
+  font-style: italic; }
+
+.larger {
+  font-size: larger; }
 
 .clearfix::before, .clearfix::after {
   content: " ";
@@ -94,7 +115,7 @@
 .qrcode-link .qrcode {
   margin: 0; }
 
-/**************************/
+/*********** list ***************/
 .list .item.item-accordion {
   line-height: 38px;
   padding-top: 0%;
@@ -107,6 +128,20 @@
   display: block !important; }
 .list .item.odd {
   background-color: #f0f0f0 !important; }
+.list .item .item-pull-left {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  max-width: 40px;
+  max-height: 40px;
+  width: 100%;
+  height: 100%;
+  background: none;
+  color: #387ef5;
+  text-align: center;
+  font-size: 1.4em;
+  line-height: 2.1em;
+  vertical-align: middle; }
 .list .item .item-char {
   position: absolute;
   top: 16px;
@@ -135,3 +170,9 @@
     bottom: 0;
     right: 0;
     left: 0; }
+
+/************* slider *************/
+.slider {
+  width: 100%;
+  height: 400px;
+  border: 5px solid #FFF; }
