--- a/www/templates/customer/around.html
+++ b/www/templates/customer/around.html
@@ -2,7 +2,7 @@
     <ion-nav-buttons side="left">
         <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
     </ion-nav-buttons>
-    <ion-content has-header="true" padding="true">
+    <ion-content class="tabbed-content-within-sidemenu-app" has-header="true" padding="true">
         <ion-header-bar class="bar bar-header item-input-inset">
             <label class="item-input-wrapper">
                 <i class="icon ion-ios-search placeholder-icon"></i>
