--- a/www/templates/customer/info.html
+++ b/www/templates/customer/info.html
@@ -8,7 +8,11 @@
                 <p class="address">{{ store.address }}, {{ store.zipcode }}</p>
             </div>
             <div class="item item-body">
-                <ion-gallery ion-gallery-items="heomoi" ion-row-height="125"></ion-gallery>
+                <ion-slide-box on-slide-changed="slideHasChanged($index)">
+                    <ion-slide ng-repeat="slide in slides">
+                        <img ng-src="{{slide.src}}">
+                    </ion-slide>
+                </ion-slide-box>
                 <p>
                     This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
                     the content is from a card-body consisting of an image and paragraph text. The footer
