--- a/www/templates/public/forgot_password.html
+++ b/www/templates/public/forgot_password.html
@@ -10,12 +10,18 @@
         <form ng-submit="resetPassword(data)">
             <div class="list list-inset">
                 <label class="item item-input">
-                    <input type="text" placeholder="Username/Email address" ng-model="data.username">
+                    <input type="text" placeholder="Username/Email address" ng-model="data.username"/>
                 </label>
             </div>
-            <div class="list list-inset" ng-class="{active: isSecurityCodeShown()}">
-                <label class="item item-input">
-                    <input type="text" placeholder="Security code" ng-model="data.code">
+            <div class="list list-inset">
+                <div class="item item-checkbox">
+                    <label class="checkbox">
+                        <input type="checkbox" ng-model="data.haveCode"/>
+                    </label>
+                    Have a security code?
+                </div>
+                <label class="item item-input" ng-show="data.haveCode">
+                    <input type="text" placeholder="Security code" ng-model="data.code"/>
                 </label>
             </div>
             <div class="button-bar">
