--- a/www/templates/customer/dashboard.html
+++ b/www/templates/customer/dashboard.html
@@ -7,6 +7,7 @@
     </ion-nav-buttons>
     <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
     <ion-content class="tabbed-content-within-sidemenu-app padding" has-header="true">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doReloadCurrentProfile()"></ion-refresher>
         <div class="row">
             <div class="col text-center">
                 <h3 class="title">Welcome {{userProfile.username}}!</h3>
