add owner template

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -9,7 +9,7 @@ $stable:                          #f8f8f8 !default;
 $positive:                        #387ef5 !default;
 $calm:                            #11c1f3 !default;
 $balanced:                        #008800 !default;
-$energized:                       #E49307 !default;
+$energized:                       rbg(232,119,93) !default;
 $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
