--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,7 +7,7 @@ $stable:                          #f8f8f8 !default;
 $positive:                        #387ef5 !default;
 $calm:                            #11c1f3 !default;
 $balanced:                        #008800 !default;
-$energized:                       #E49307 !default;
+$energized:                       rbg(232,119,93) !default;
 $assertive:                       #ef473a !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
@@ -49,7 +49,10 @@ $ion-img-path: "../img" !default;
   font-style: italic;
 }
 .larger{
-  font-size: larger;
+  font-size: 1.3em;
+}
+.x-large{
+	font-size: 2em;
 }
 .clearfix::before, .clearfix::after{
   content: " ";
@@ -209,4 +212,15 @@ $ion-img-path: "../img" !default;
   width: 100%;
   height: 400px;
   border: 5px solid #FFF;
+  .slider-slide {
+    .desc{
+      background: rgba(0, 0, 0, 0.5);
+      position: absolute;
+      width: 100%;
+      padding: 10px;
+      bottom: 0;
+      height: 80px;
+      color: #fff;
+    }
+  }
 }
