--- a/www/css/style.css
+++ b/www/css/style.css
@@ -32,7 +32,10 @@
   font-style: italic; }
 
 .larger {
-  font-size: larger; }
+  font-size: 1.3em; }
+
+.x-large {
+  font-size: 2em; }
 
 .clearfix::before, .clearfix::after {
   content: " ";
@@ -176,3 +179,11 @@
   width: 100%;
   height: 400px;
   border: 5px solid #FFF; }
+  .slider .slider-slide .desc {
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    padding: 10px;
+    bottom: 0;
+    height: 80px;
+    color: #fff; }
