--- a/www/templates/customer/main-abstract.html
+++ b/www/templates/customer/main-abstract.html
@@ -2,6 +2,9 @@
     <ion-side-menu-content ng-controller="DashCtrl">
       <ion-nav-bar class="bar-positive nav-title-slide-ios7">
         <ion-nav-back-button class="button-clear"><i class="icon ion-ios7-arrow-back"></i></ion-nav-back-button>
+		<ion-nav-buttons side="right">
+			<button class="button icon-left ion-log-out button-stable" ng-click="logout()">Logout</button>
+		</ion-nav-buttons>
       </ion-nav-bar>
       <ion-nav-view name="main-content" animation="slide-left-right"></ion-nav-view>
     </ion-side-menu-content>
