--- a/www/templates/owner/main-abstract.html
+++ b/www/templates/owner/main-abstract.html
@@ -15,7 +15,8 @@
       <ion-content has-header="true">
         <ul class="list">
           <a ui-sref="owner.dash" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-social-buffer"></i>Home</a>
-          <a ui-sref="owner.business" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-person"></i>My Business</a>
+          <a ui-sref="owner.profile" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-person"></i>Profile</a>
+          <a ui-sref="owner.business" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-briefcase"></i>Business</a>
           <a ui-sref="owner.contact" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-email"></i> Contact</a>
           <a ui-sref="owner.help" nav-clear class="item item-icon-left" ng-click="toggleLeft()"><i class="icon ion-help"></i>Help</a>
         </ul>
